# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: limit_blank_lines.py
tests/: limit_blank_lines_test.py
