[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pezcode/pre-commit-hooks
author = Pablo Escobar
author_email = mail@rvrs.in
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts =
    limit-blank-lines = pre_commit_hooks.limit_blank_lines:main

[options.extras_require]
test =
    pytest
